Bug #43528: Align user images in tile view of users module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@77719 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/GridTile.styl
+++ b/management/univention-web/css/GridTile.styl
@@ -70,7 +70,9 @@
 		.umcGridTileIcon
 			height: 70px
 			width: 70px
-			left: 5px
+			left: 11px
+			top: 50%
+			margin-top: -(@height/2)
 			position: absolute
 			border-radius: 35px
 			overflow: hidden
